calendar squished bug fixed, Melissa removed from home page

--- a/css/main.css
+++ b/css/main.css
@@ -2761,7 +2761,7 @@ span.stButton_gradient,
 
 .iframe-cal {
   border-width: 0;
-  height: -webkit-fill-available;
+  height: 50em;
   width: -webkit-fill-available;
 }
 
